Отверстан первый блок detail-task

--- a/index.html
+++ b/index.html
@@ -503,23 +503,24 @@
                                 <div class="detaik-wrapper">
                                     <div class="datail-body">
                                         <div class="detail-img-wrapper">
-                                            <img src="" alt="">
-                                            <img src="" alt="">
+                                            <img src="./img/main/task-page/main/detail/05.png" alt="">
+                                            <img src="./img/main/task-page/main/detail/video-bar.svg" alt="" class="vidio-bar">
                                         </div>
                                         <div class="detail-info">
                                             <h2 class="detail-title">Creating Awesome Mobile Apps</h2>
                                             <div class="detail-subtitle">
                                                 <div>
-                                                    <h3 class="card-profession">UI UX Design</h3>
+                                                    <h3 class="card-profession">UI UX Design . Apps Design</h3>
+                                                    <img src="./img/main/task-page/main/detail/04.svg" alt="" class="detail-line">
                                                     <button class="mentor-like menhor-unfollow detail-follow">+ Get Mentors</button>
                                                 </div>
 
                                                 <div>
-                                                    <div class="detail-task">
+                                                    <div class="detail-students">
                                                         <img src="./img/main/task-page/main/detail/02.svg" alt="task">
                                                         <span class="detail-students">200 Students Involved</span>
                                                     </div>
-                                                    <div>
+                                                    <div class="detail-clock">
                                                         <img src="./img/main/task/clock.png" alt="">
                                                         <h5>3 Days Left</h5>
                                                     </div>
@@ -529,10 +530,23 @@
                                                 <h3 class="detail-text-title">Description</h3>
                                                 <p>Follow the video tutorial above. Understand how to use each tool in the Figma application. Also learn how to make a good and correct design. Starting from spacing, typography, content, and many other design hierarchies. Then try to make it yourself with your imagination and inspiration.</p>
                                             </div>
+                                            <h3 class="detail-list-title">Essence of Assessment</h3>
                                             <ul class="detail-list">
                                                 <li class="detail-iteam">
                                                     <img src="./img/main/task-page/main/detail/03.svg" alt="">
                                                     <h5>Understanding the tools in Figma</h5>
+                                                </li>
+                                                <li class="detail-iteam">
+                                                    <img src="./img/main/task-page/main/detail/03.svg" alt="">
+                                                    <h5>Understand the basics of making designs</h5>
+                                                </li>
+                                                <li class="detail-iteam">
+                                                    <img src="./img/main/task-page/main/detail/03.svg" alt="">
+                                                    <h5>Designing a mobile application using figma</h5>
+                                                </li>
+                                                <li class="detail-iteam">
+                                                    <img src="./img/main/task-page/main/detail/03.svg" alt="">
+                                                    <h5>Presenting the design flow</h5>
                                                 </li>
                                             </ul>
                                         </div>
