--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                                 <div class="detaik-wrapper">
                                     <div class="datail-body">
                                         <div class="detail-img-wrapper">
-                                            <img src="./img/main/task-page/main/detail/05.png" alt="">
+                                            <img src="./img/main/task-page/main/detail/05.png" alt="" class="datail-img">
                                             <img src="./img/main/task-page/main/detail/video-bar.svg" alt="" class="vidio-bar">
                                         </div>
                                         <div class="detail-info">
@@ -518,11 +518,11 @@
                                                 <div>
                                                     <div class="detail-students">
                                                         <img src="./img/main/task-page/main/detail/02.svg" alt="task">
-                                                        <span class="detail-students">200 Students Involved</span>
+                                                        <span class="detail-students">200StudentsInvolved</span>
                                                     </div>
                                                     <div class="detail-clock">
                                                         <img src="./img/main/task/clock.png" alt="">
-                                                        <h5>3 Days Left</h5>
+                                                        <h5>1 Hour</h5>
                                                     </div>
                                                 </div>
                                             </div>
@@ -555,7 +555,7 @@
                                         <h4 class="side-top-title">Assigned Assignments</h4>
                                         <div class="side-title-wrapper">
                                             <h2 class="side-title">Creating Awesome Mobile Apps</h2>
-                                            <h5 class="card-profession">UI UX Design</h5>
+                                            <h5 class="card-profession side-profession">UI UX Design . Apps Design</h5>
                                         </div>
                                         <div class="side-students">
                                             <h3 class="students-title">Detail Student</h3>
@@ -563,6 +563,14 @@
                                                 <li class="side-iteam students-iteam">
                                                     <h6>Student's name</h5>
                                                     <h5>Skylar Dias</h5>
+                                                </li>
+                                                <li class="side-iteam students-iteam">
+                                                    <h6>Student Class</h5>
+                                                    <h5>MIPA 2</h5>
+                                                </li>
+                                                <li class="side-iteam students-iteam">
+                                                    <h6>Student Number</h5>
+                                                    <h5>10</h5>
                                                 </li>
                                             </ul>
                                         </div>
@@ -573,11 +581,12 @@
                                                 <h5>1 July 2022</h5>
                                             </div>
                                             <div class="file-meneger">
-                                                <h6>Last Modified</h6>
+                                                <h6>File submissions</h6>
                                                 <div class="import">
-
+                                                    <img src="./img/main/task-page/main/detail/import.svg" alt="" class="impot-img">
                                                 </div>
                                                 <span>*drag or browser from device</span>
+                                                <a href="#" class="task-btn">Submit</a>
                                             </div>
                                         </div>
                                     </div>
