Fix некоторых частей slider

--- a/index.html
+++ b/index.html
@@ -604,7 +604,70 @@
                 </section>
 
                 <section class="mentors-page _hidden">
+
+                    <div class="header-task">
+                        <div class="_container-right header-task-conrtainer">
+                            <div class="header-wrapper">
+                                <div class="header-task-top task-header-flex">
+                                    <div class="burger _hidden">
+                                        <div class="burger-header">
+                                            <div class="burger-iteam"></div>
+                                        </div>
+                                        <ul class="burger-list _hidden">
+                                            <li class="menu-iteam">
+                                                <img src="./img/taskbar-left/01.svg" alt="" class="menu-icon">
+                                                <h2 class="menu-title">Overview</h2>
+                                            </li>
+                                            <li class="menu-iteam">
+                                                <img src="./img/taskbar-left/02.svg" alt="" class="menu-icon">
+                                                <h2 class="menu-title">Task</h2>
+                                            </li>
+                                            <li class="menu-iteam _active-menu-iteam">
+                                                <img src="./img/taskbar-left/03.svg" alt="" class="menu-icon">
+                                                <h2 class="menu-title">Mentors</h2>
+                                            </li>
+                                            <li class="menu-iteam">
+                                                <img src="./img/taskbar-left/04.svg" alt="" class="menu-icon">
+                                                <h2 class="menu-title">Message</h2>
+                                            </li>
+                                            <li class="menu-iteam">
+                                                <img src="./img/taskbar-left/05.svg" alt="" class="menu-icon">
+                                                <h2 class="menu-title">Settings</h2>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <h2 class="exploer-title exploer-title-d">Explore Mentors</h2>
+                                    <div class="header-icon">
+                                        <img src="./img/main/header/massange.svg" alt="">
+                                        <img src="./img/main/header/user.png" alt="">
+                                    </div>
+                                </div>
+                                <h2 class="exploer-title exploer-title-m _hidden">Explore Task</h2>
+                                <div class="header-task-bottom task-header-flex">
+                                    <div class="serch">
+                                        <input type="text" class="serch-iput" placeholder="Search  Mentors">
+                                        <img src="./img/main/task-page/header/01.svg" alt="">
+                                    </div>
+                                    <ul class="sorting">
+                                        <li class="sorting-iteam">
+                                            <img src="./img/main/task-page/header/02.svg" alt="">
+                                            <h3 class="sorting-title">Category</h3>
+                                        </li>
+                                        <li class="sorting-iteam">
+                                            <img src="./img/main/task-page/header/03.svg" alt="">
+                                            <h3 class="sorting-title">Sort By : Deadline</h3>
+                                        </li>
+                                        <li class="sorting-iteam sorting-iteam-m _hidden">
+                                            <img src="./img/main/task-page/header/04.svg" alt="">
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="_container-right">
+
 
                         <div class="recente-mentors">
                             <div class="section-header recent-header">
@@ -619,10 +682,10 @@
                                 <div class="menthor-card recent-card">
                                     <div class="menthor-info">
                                         <div>
-                                            <img src="./img/main/menthor/mentor-photo02.png" alt="mentor-phohto" class="menthor-photo">
+                                            <img src="./img/main/mentors-page/mentor01.png" alt="mentor-phohto" class="menthor-photo">
                                             <div class="menthor-prof">
-                                                <h3 class="menthor-name">Abraham Lincoln</h3>
-                                                <h4 class="card-profession">3D Design</h4>
+                                                <h3 class="menthor-name">Jessica Jane</h3>
+                                                <h4 class="card-profession">Web Developer</h4>
                                             </div>
                                         </div>
                                         <button class="mentor-like menhor-follow">Followed</button>
@@ -630,11 +693,11 @@
                                     <div class="menthor-progress">
                                         <div class="menthor-task">
                                             <img src="./img/main/menthor/01.svg" alt="task">
-                                            <span class="mentor-progress-descr">32 Task</span>
+                                            <span class="mentor-progress-descr">40 Task</span>
                                         </div>
                                         <div class="star-raiting">
                                             <img src="./img/main/menthor/star.svg" alt="star">
-                                            <span class="mentor-progress-descr">4,9  (510 Reviews)</span>
+                                            <span class="mentor-progress-descr">4,7  (750 Reviews)</span>
                                         </div>
                                     </div>
                                 </div>
@@ -663,10 +726,10 @@
                                 <div class="menthor-card recent-card">
                                     <div class="menthor-info">
                                         <div>
-                                            <img src="./img/main/menthor/mentor-photo02.png" alt="mentor-phohto" class="menthor-photo">
+                                            <img src="./img/main/mentors-page/mentor07.png" alt="mentor-phohto" class="menthor-photo">
                                             <div class="menthor-prof">
-                                                <h3 class="menthor-name">Abraham Lincoln</h3>
-                                                <h4 class="card-profession">3D Design</h4>
+                                                <h3 class="menthor-name">Curious George</h3>
+                                                <h4 class="card-profession">UI UX Design</h4>
                                             </div>
                                         </div>
                                         <button class="mentor-like menhor-follow">Followed</button>
@@ -674,21 +737,21 @@
                                     <div class="menthor-progress">
                                         <div class="menthor-task">
                                             <img src="./img/main/menthor/01.svg" alt="task">
-                                            <span class="mentor-progress-descr">32 Task</span>
+                                            <span class="mentor-progress-descr">40 Task</span>
                                         </div>
                                         <div class="star-raiting">
                                             <img src="./img/main/menthor/star.svg" alt="star">
-                                            <span class="mentor-progress-descr">4,9  (510 Reviews)</span>
+                                            <span class="mentor-progress-descr">4,7  (750 Reviews)</span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="menthor-card recent-card">
                                     <div class="menthor-info">
                                         <div>
-                                            <img src="./img/main/menthor/mentor-photo02.png" alt="mentor-phohto" class="menthor-photo">
+                                            <img src="./img/main/mentors-page/mentor08.png" alt="mentor-phohto" class="menthor-photo">
                                             <div class="menthor-prof">
-                                                <h3 class="menthor-name">Abraham Lincoln</h3>
-                                                <h4 class="card-profession">3D Design</h4>
+                                                <h3 class="menthor-name">Brian Robinson</h3>
+                                                <h4 class="card-profession">Android Developer</h4>
                                             </div>
                                         </div>
                                         <button class="mentor-like menhor-follow">Followed</button>
@@ -696,11 +759,11 @@
                                     <div class="menthor-progress">
                                         <div class="menthor-task">
                                             <img src="./img/main/menthor/01.svg" alt="task">
-                                            <span class="mentor-progress-descr">32 Task</span>
+                                            <span class="mentor-progress-descr">28 Task</span>
                                         </div>
                                         <div class="star-raiting">
                                             <img src="./img/main/menthor/star.svg" alt="star">
-                                            <span class="mentor-progress-descr">4,9  (510 Reviews)</span>
+                                            <span class="mentor-progress-descr">4,8  (370 Reviews)</span>
                                         </div>
                                     </div>
                                 </div>
@@ -949,6 +1012,6 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="./libs/slick/slick.min.js"></script>
-    <script src="./js/script.js"></script>  
+    <script src="./js/script.js"></script>   
 </body>
 </html>
